--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
         <title>Tugas Satu DESWEB</title>
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -12,10 +14,10 @@
                         <a href="#" class="a-navbar">Home</a>
                     </li>
                     <li class="li-navbar">
-                        <a href="#" class="a-navbar">Contact</a>
+                        <a href="https://api.whatsapp.com/send?phone=6281345986771" class="a-navbar">Contact</a>
                     </li>
                     <li class="li-navbar">
-                        <a href="#" class="a-navbar">About Us</a>
+                        <a href="about.html" class="a-navbar">About Us</a>
                     </li>
                 </ul>
             </div>
@@ -28,49 +30,49 @@
                 <!-- blog-1 -->
                 <div class="blog-box">
                     <img src="bunga1.jpg" alt="Bunga Tulip" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Bunga Tulip</h2></a>
+                    <a href="tulip.html" class="a-blog"><h2 class="blog-title">Bunga Tulip</h2></a>
                     <p class="blog-content">Bunga tulip juga memiliki makna simbolik yang berbeda-beda tergantung pada warna dan jenisnya, seperti cinta, keindahan, kebahagiaan</p>
                 </div>
             
                 <div class="blog-box">
                     <img src="bunga2.jpg" alt="Bunga Daisy" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Bunga Daisy</h2></a>
+                    <a href="daisy.html" class="a-blog"><h2 class="blog-title">Bunga Daisy</h2></a>
                     <p class="blog-content">Bunga daisy dikenal dengan penampilan sederhananya yang menarik dan sering dianggap sebagai simbol kesucian, kebersihan, dan kesederhanaan.</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="bunga3.jpg" alt="Bunga Mawar Putih Pink" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Bunga Mawar Putih Pink</h2></a>
+                    <a href="mawar.html" class="a-blog"><h2 class="blog-title">Bunga Mawar Putih Pink</h2></a>
                     <p class="blog-content">Kombinasi warna putih dan pink ini menciptakan tampilan yang cantik dan elegan pada bunga mawar.</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="bunga 4.jpg" alt="Bunga Dekorasi" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Bunga Mawar Dekorasi</h2></a>
+                    <a href="dekorasi.html" class="a-blog"><h2 class="blog-title">Bunga Mawar Dekorasi</h2></a>
                     <p class="blog-content">Kombinasi antara kecantikan bunga mawar pink dan kesenangan dari balon menciptakan hadiah yang indah dan menggembirakan.</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="piano.jpg" alt="piano" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Melodi Piano</h2></a>
+                    <a href="piano.html" class="a-blog"><h2 class="blog-title">Melodi Piano</h2></a>
                     <p class="blog-content"> Nuansa hitam putih dalam permainan piano menciptakan kesan yang klasik, elegan, dan emosional</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="politik.jpg" alt="politik" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Politik Internasional</h2></a>
+                    <a href="politik.html" class="a-blog"><h2 class="blog-title">Politik Internasional</h2></a>
                     <p class="blog-content">kompleksitas sistem politik global, dinamika kekuasaan, serta dampak peristiwa internasional terhadap berbagai aspek kehidupan negara-negara di seluruh dunia</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="balet.jpg" alt="Balet" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Balet</h2></a>
+                    <a href="balet.html" class="a-blog"><h2 class="blog-title">Balet</h2></a>
                     <p class="blog-content">Tarian ini bisa merangkum kisah, emosi, dan gagasan yang bervariasi  juga mengkomunikasikan perasaan dan narasi melalui gerakan yang lemah gemulai hingga kuat dan dinamis.</p>
                 </div>
 
                 <div class="blog-box">
                     <img src="kue.jpg" alt="kue" class="blog-image">
-                    <a href="#" class="a-blog"><h2 class="blog-title">Makna Kue</h2></a>
+                    <a href="kue.html" class="a-blog"><h2 class="blog-title">Makna Kue</h2></a>
                     <p class="blog-content">kue melambangkan kenikmatan dan keceriaan dalam makanan </p>
                 </div>
 
@@ -82,6 +84,7 @@
         </div >
             <!-- Footer -->
     <footer>
+        
         <p>&copy; Lia Website 2023. All rights reserved</p>
         <p>11211033 Dwi Savira Aprilianti</p>
     </footer>
