--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <a href="https://api.whatsapp.com/send?phone=6281345986771" class="a-navbar">Contact</a>
                     </li>
                     <li class="li-navbar">
-                        <a href="about.html" class="a-navbar">About Us</a>
+                        <a href="#" class="a-navbar">About Us</a>
                     </li>
                 </ul>
             </div>
